[metadata]
name = Molecular Property
version = 0.0.1
author = Abhishek Panchal
author_email = abhishek.dsg@gmail.com
description = Python package to determine Number of Molecules and Molecular Weight of a molecule or compound with brackets supported.
long_description = file: README.md
long_description_content_type = text/markdown
url = GITHUB REPOSITORY LINK
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License (GPL)
     Operating System :: OS Independent[options]
packages = find:
python_requires = >=3.7
include_package_data = True
